<resources>
    <string name="app_name">mrs-team11-Gorki-Projekat</string>
    <string name="logo">021Ride</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="question">Where would you like to go?</string>
    <string name="startingAddressHint">Starting Point (e.g. Jerneja Kopitara 32)</string>
    <string name="destinationAddressHint">Destination (e.g. Kopernikova 24)</string>
    <string name="estimate">Estimate</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="options">Options</string>
    <string name="rideCardTitle">Ride No. </string>
    <string name="startingTime">• Starting time - </string>
    <string name="endingTime">• Ending time - </string>
    <string name="startingPoint">• Starting point - </string>
    <string name="destination">• Destination - </string>
    <string name="price">• Price - </string>
    <string name="cancelled">• Cancelled</string>
    <string name="panicActivated">• PANIC activated</string>
    <string name="moreInfo">MORE INFO</string>
    <string name="four">4</string>
    <string name="cancelRide">CANCEL</string>
    <string name="startAddress">Start address</string>
    <string name="endAddress">End address</string>
    <string name="stoppingPoints">Stopping points</string>
    <string name="linkedPassengers">Linked passengers</string>
    <string name="scheduledTime">Scheduled time</string>
    <string name="scheduledTimeHint">e.g. 2026–02–28T18:15</string>
    <string name="link">Link</string>
    <string name="add">Add</string>
    <string name="orderYourRide">Order your ride</string>
    <string name="nextScheduledRide">Next scheduled ride</string>
    <string name="startRide">Start ride</string>
    <string name="viewPassengers">View passengers</string>
    <string name="nextScheduledRidePrice">Price - </string>
    <string name="linkedPassengersLabel">Enter linked passenger email</string>
    <string name="stoppingPointLabel">Enter stopping point</string>
    <string name="noScheduledRides">There are currently no scheduled rides</string>
    <string name="orderingFavourites">Select route to order from favourites</string>
    <string name="stoppingPointsCard">• Stopping points:</string>
    <string name="removeFromFav">REMOVE FROM FAVOURITES</string>
    <string name="choose">CHOOSE</string>
    <string name="routeCardTitle">Route No. </string>

    <string name="navbarMenuText">Menu</string>
    <string name="personalInfoText">Personal info</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phone">Phone number</string>
    <string name="homeAddress">Home Address</string>
    <string name="saveChanges">Save changes</string>
    <string name="revertChanges">Revert changes</string>
    <string name="editOrChangePic">Edit or change photo</string>
    <string name="emailFill">marko.pavlovic2404004@gmail.com</string>
    <string name="firstNameFill">Marko</string>
    <string name="lastNameFill">Pavlovic</string>
    <string name="phoneFill">+381648816145</string>
    <string name="homeAddressFill">Mornarska 51</string>
    <string name="changePasswordText">Change Password</string>
    <string name="currentPassword">Current Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmNewPassword">Confirm New Password</string>
    <string name="done">Done</string>
    <string name="vehicleInformation">Vehicle Information</string>
    <string name="model">Model</string>
    <string name="licensePlate">License plate</string>
    <string name="numberOfSeats">Number of seats</string>
    <string name="type">Type</string>
    <string name="vehicleType">Vehicle type</string>
    <string name="babyTransport">Baby transport</string>
    <string name="petFriendly">Pet friendly</string>
    <string name="modelFIll">Ford Focus</string>
    <string name="licensePlateFill">NS-523-SV</string>
    <string name="numberOfSeatsFill">5</string>
    <string name="typeFill">Standard</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dateLabel">Pick a date</string>
    <string name="fromDate">   Wednesday, January 1 </string>
    <string name="toDate">   Friday, January 3 </string>
    <string name="choseCriteria">Choose</string>
    <string name="orderText">Order</string>
    <string name="cardTitle">"Ride No.1"</string>
    <string name="rideInfo">• Starting time - 17:05\n• Ending time - 17:20\n• Starting point
        - Miše Dimitrijevića 5,\t\tGrbavica\n• Destination -
        Jerneja Kopitara 32, Telep"</string>
    <string name="rideInfo2">
       • $ Price - 15.00$\n• Canceled\n• PANIC activated
    </string>
    <string-array name="ride_status">
        <item>All rides</item>
        <item>Completed</item>
        <item>Canceled</item>
        <item>Panic</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Registration labels -->
    <string name="registration">Registration</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="home_address">Home address</string>
    <string name="phone_number">Phone number</string>
    <string name="choose_picture">Choose a picture that others can see (optional): </string>
    <string name="select_image">Select image</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="open_confirmation_link">Open confirmation link</string>
    <string name="confirmation_email_sent">(24h) Confirmation email sent to %1$s</string>

    <!-- Login labels -->
    <string name="enter_credentials">Enter your credentials</string>
    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_button">Login</string>
    <string name="reset_text">Reset link sent to %1$s</string>
    <string name="open_reset_link">Open reset link</string>

    <string name="button_title">Ucitaj istoriju</string>
    <string name="res">Rezultat  </string>
    <string name="btnLog">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="eta">ETA: -</string>
    <string name="inconsistency">Inconsistency</string>
    <string name="panic">PANIC</string>


</resources>