<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:radius="24dp"
    android:background="@drawable/container_bg">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/formStyleInScroll">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            style="@style/formTitle" />

        <View
            android:layout_width="320dp"
            android:layout_height="2dp"
            android:layout_marginVertical="8dp"
            android:background="@color/purple" />

        <ImageView
            android:id="@+id/userPic"
            android:contentDescription="@string/editOrChangePic"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/user_pic_registration"
            android:scaleType="centerCrop"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/firstNameInput"
            android:text="@string/firstName"
            style="@style/formLabel"/>

        <EditText
            android:id="@+id/firstNameInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            android:autofillHints="name"
            style="@style/formInput" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/lastNameInput"
            android:text="@string/lastName"
            style="@style/formLabel"/>

        <EditText
            android:id="@+id/lastNameInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            android:autofillHints="name"
            style="@style/formInput" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/homeAddressInput"
            android:text="@string/homeAddress"
            style="@style/formLabel"/>

        <EditText
            android:id="@+id/homeAddressInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPostalAddress"
            android:autofillHints="postalAddress"
            style="@style/formInput" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/phoneInput"
            android:text="@string/phone"
            style="@style/formLabel"/>

        <EditText
            android:id="@+id/phoneInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="phone"
            android:autofillHints="phone"
            style="@style/formInput" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/emailInput"
            android:text="@string/email"
            style="@style/formLabel"/>

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textWebEmailAddress"
            android:autofillHints="emailAddress"
            style="@style/formInput" />

        <View
            android:layout_width="320dp"
            android:layout_height="2dp"
            android:layout_marginVertical="8dp"
            android:background="@color/purple" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicleInformation"
            style="@style/formTitle" />

        <View
            android:layout_width="320dp"
            android:layout_height="2dp"
            android:layout_marginVertical="8dp"
            android:background="@color/purple" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/modelInput"
            android:text="@string/model"
            style="@style/formLabel"/>

        <EditText
            android:id="@+id/modelInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="text"
            android:autofillHints="none"
            style="@style/formInput" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/licensePlateInput"
            android:text="@string/licensePlate"
            style="@style/formLabel"/>

        <EditText
            android:id="@+id/licensePlateInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="text"
            android:autofillHints="none"
            style="@style/formInput" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/seatsInput"
            android:text="@string/numberOfSeats"
            style="@style/formLabel"/>

        <EditText
            android:id="@+id/seatsInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="number"
            android:autofillHints="none"
            style="@style/formInput" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/vehicleTypeDropdown"
            android:text="@string/type"
            style="@style/formLabel"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/choseCriteria"
            style="@style/formDropdownLayout">

            <AutoCompleteTextView
                android:id="@+id/vehicleTypeDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/babyTransport"
            style="@style/formLabel"/>

        <RadioGroup
            android:id="@+id/babyTransport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/yesBabyTransport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                style="@style/formRadioButton"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/noBabyTransport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:checked="true"
                style="@style/formRadioButton"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/petFriendly"
            style="@style/formLabel"/>

        <RadioGroup
            android:id="@+id/petFriendly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/yesPetFriendly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                style="@style/formRadioButton"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/noPetFriendly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:checked="true"
                style="@style/formRadioButton"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        </RadioGroup>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/register"
            style="@style/formButton" />

    </LinearLayout>
</ScrollView>
